--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content-script.js"]
+            "js": ["content-script.js"],
+            "css": ["global.css"]
         }
     ],
     "action": {
