able to see when url switches and compares with storage

--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,8 @@
         "tabs",
         "storage",
         "activeTab"
-    ]
+    ],
+    "background": {
+        "service_worker": "background.js"
+    }
 }
