--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version": 3,
     "name": "Clarity",
     "version": "0.1.0",
+    "description": "Block websites to gain better control of your browsing habits.",
     "content_scripts": [
         {
             "matches": ["https://*/*"],
@@ -9,6 +10,12 @@
             "css": ["global.css"]
         }
     ],
+    "icons": {
+        "16": "assets/icons/icon16.png",
+        "32": "assets/icons/icon32.png",
+        "48": "assets/icons/icon48.png",
+        "128": "assets/icons/icon128.png"
+    },
     "action": {
         "default_popup": "index.html"
     },
